2006-06-28  Derek Price  <derek@ximbiot.com>

	[bug #16961]
	* login.c (get_cvs_password): Return copy of global variable.
	(Patch from <mbarabas@redhat.com>.)

2006-06-23  Larry Jones  <lawrence.jones@ugs.com>

	* server.c (do_cvs_command): Remove unused variable.

2006-06-22  Larry Jones  <lawrence.jones@ugs.com>

	* mkmodules.c (modules_contents): Remove defunct -i option.

2006-06-10  Derek Price  <derek@ximbiot.com>

	* sanity.sh (conflicts4): Don't expect specific file permissions.  Use
	$PLUS.

2006-06-08  Derek Price  <derek@ximbiot.com>

	* sanity.sh (conflicts4): Test that the client honors Empty-conflicts.

	* server.c (requests): Add "Empty-conflicts" marker.
	* client.c (send_fileproc): Send contents of all files with conflicts
	unless the server can handle the conflict marker in the Entry.

	* sanity.sh (conflicts4): New tests.
	(Original patch from Mark D. Baushke <mdb@gnu.org>.)

2006-06-07  Mark D. Baushke  <mdb@gnu.org>

	* modules.c (my_module): Remove unused variable xvalue.
	[Fixes NetBSD coverity cid-705.]
	
2006-05-31  Mark D. Baushke  <mdb@gnu.org>

	* add.c (add): Fix memory leak.
	[Fixes NetBSD coverity cid-3751.]
	(add_directory): Fix memory leak.
	[Fixes NetBSD coverity cid-3640.]

	* checkin.c (Checkin): Avoid possible NULL dereference.
	[Fixes NetBSD coverity cid-2425.]

	* client.c (auth_server): Fix memory leak.
	[Fixes NetBSD coverity cid-3404.]

	* commit.c (remove_file): Fix memory leak.
	[Fixes NetBSD coverity cid-3752.]

	* rcs.c (RCS_checkin): Add assert (tip).
	[Fixes NetBSD coverity cid-2424.]

2006-05-26  Mark D. Baushke  <mdb@gnu.org>

	* add.c (add): Do not leak memory.
	[Fixes NetBSD coverity cid-2199.]

	* edit.c (onoff_fileproc): Do not leak memory.
	[Fixes NetBSD coverity cid-2201.]

	* edit.c (onoff_filesdoneproc): Do not leak memory.
	[Fixes NetBSD coverity cid-2202.]

	* lock.c (readers_exist): Add assert (lockdir).
	[Fixes NetBSD coverity cid-2411.]

	* rcs.c (RCS_findlock_or_tip): Do not leak memory.